@@ -288,8 +288,11 @@ class WorkSheetParser(object):
         self.ws.auto_filter.ref = element.get("ref")
         for fc in safe_iterator(element, '{%s}filterColumn' % SHEET_MAIN_NS):
             filters = fc.find('{%s}filters' % SHEET_MAIN_NS)
+            if filters is None:
+                continue
             vals = [f.get("val") for f in safe_iterator(filters, '{%s}filter' % SHEET_MAIN_NS)]
-            self.ws.auto_filter.add_filter_column(fc.get("colId"), vals, blank=filters.get("blank"))
+            blank = filters.get("blank")
+            self.ws.auto_filter.add_filter_column(fc.get("colId"), vals, blank=blank)
         for sc in safe_iterator(element, '{%s}sortCondition' % SHEET_MAIN_NS):
             self.ws.auto_filter.add_sort_condition(sc.get("ref"), sc.get("descending"))
 
